<resources>
    <string name="app_name" translatable="false">My Payments</string>

    <!-- Base -->
    <string name="yes" >Yes</string>
    <string name="no" >No</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Main activity -->
    <string name="exit_from_app">Exit the program?</string>

    <!-- Auth fragment -->
    <string name="hint_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="description_payment_image" translatable="false">Payment image</string>

    <!-- Payments fragment -->
    <string name="btn_logout">Logout</string>
    <string name="toolbar_payments_title">My Payments</string>
    <string name="logout_from_account">Logout from this account?</string>

    <!-- Errors -->
    <string name="data_error">Get data error</string>
    <string name="login_password_error">Login or password wrong</string>
    <string name="network_unavailable_error">Check your internet connection</string>
    <string name="token_blank_error">Token is blank</string>
    <string name="unknown_error">Unknown error</string>

</resources>